Update: premium pricing localization and currency detection in PremiumGate

--- a/frontend/locales/ar.json
+++ b/frontend/locales/ar.json
@@ -316,7 +316,7 @@
   "premium": {
     "with_premium_you_can": "مع Premium، يمكنك:",
     "upgrade_now": "الترقية إلى Premium",
-    "pricing_hint": "ابتداءً من 1 000 FCFA / شهر",
+    "pricing_hint": "2 500 FCFA / شهر",
     "features": {
       "orders": {
         "title": "الطلبات الذكية",
