--- a/frontend/locales/en.json
+++ b/frontend/locales/en.json
@@ -316,7 +316,7 @@
   "premium": {
     "with_premium_you_can": "With Premium, you can:",
     "upgrade_now": "Upgrade to Premium",
-    "pricing_hint": "Starting from 1,000 FCFA / month",
+    "pricing_hint": "2,500 FCFA / month",
     "features": {
       "orders": {
         "title": "Smart Ordering",
