--- a/frontend/locales/es.json
+++ b/frontend/locales/es.json
@@ -316,7 +316,7 @@
   "premium": {
     "with_premium_you_can": "Con Premium, puedes:",
     "upgrade_now": "Actualizar a Premium",
-    "pricing_hint": "Desde 1 000 FCFA / mes",
+    "pricing_hint": "2 500 FCFA / mes",
     "features": {
       "orders": {
         "title": "Pedidos Inteligentes",
