--- a/frontend/locales/fr.json
+++ b/frontend/locales/fr.json
@@ -328,7 +328,7 @@
   "premium": {
     "with_premium_you_can": "Avec Premium, vous pouvez :",
     "upgrade_now": "Passer à Premium",
-    "pricing_hint": "À partir de 1 000 FCFA / mois",
+    "pricing_hint": "2 500 FCFA / mois",
     "features": {
       "orders": {
         "title": "Commandes Intelligentes",
