--- a/frontend/locales/ro.json
+++ b/frontend/locales/ro.json
@@ -263,7 +263,7 @@
   "premium": {
     "with_premium_you_can": "With Premium, you can:",
     "upgrade_now": "Upgrade to Premium",
-    "pricing_hint": "Începând de la 1 000 FCFA / lună",
+    "pricing_hint": "2 500 FCFA / lună",
     "features": {
       "orders": {
         "title": "Smart Ordering",
