--- a/frontend/locales/wo.json
+++ b/frontend/locales/wo.json
@@ -263,7 +263,7 @@
   "premium": {
     "with_premium_you_can": "With Premium, you can:",
     "upgrade_now": "Upgrade to Premium",
-    "pricing_hint": "Tàmbalee ci 1 000 FCFA / weer",
+    "pricing_hint": "2 500 FCFA / weer",
     "features": {
       "orders": {
         "title": "Smart Ordering",
