--- a/frontend/locales/zh.json
+++ b/frontend/locales/zh.json
@@ -316,7 +316,7 @@
   "premium": {
     "with_premium_you_can": "使用Premium，您可以：",
     "upgrade_now": "升级到Premium",
-    "pricing_hint": "从1 000 FCFA/月起",
+    "pricing_hint": "2 500 FCFA / 月",
     "features": {
       "orders": {
         "title": "智能订购",
