--- a/frontend/locales/hi.json
+++ b/frontend/locales/hi.json
@@ -316,7 +316,7 @@
   "premium": {
     "with_premium_you_can": "Premium के साथ, आप कर सकते हैं:",
     "upgrade_now": "Premium में अपग्रेड करें",
-    "pricing_hint": "1 000 FCFA / महीने से शुरू",
+    "pricing_hint": "2 500 FCFA / महीना",
     "features": {
       "orders": {
         "title": "स्मार्ट ऑर्डरिंग",
