--- a/frontend/locales/tr.json
+++ b/frontend/locales/tr.json
@@ -263,7 +263,7 @@
   "premium": {
     "with_premium_you_can": "With Premium, you can:",
     "upgrade_now": "Upgrade to Premium",
-    "pricing_hint": "1 000 FCFA / ay'dan başlayan",
+    "pricing_hint": "2 500 FCFA / ay",
     "features": {
       "orders": {
         "title": "Smart Ordering",
